Correção do botão de voltar

--- a/FitlyApp/Formulario/index.html
+++ b/FitlyApp/Formulario/index.html
@@ -54,7 +54,7 @@
         <div class="vazio"></div>
         <div class="vazio"></div>
       </div>
-      <form action="#">
+      <form action="#" id="pag2">
         <h4>Qual sua altura? (cm)</h4>
         <label class="texto">
           <input type="number" placeholder="Ex: 175" id="altura" required />
@@ -78,7 +78,7 @@
         <div class="preenchido"></div>
         <div class="vazio"></div>
       </div>
-      <form action="#">
+      <form action="#" id="pag3">
         <h3>Com que frequência você se exercita?</h3>
         <label class="opcao">
           <input type="radio" name="frequencia" value="1" required />Sedentário
@@ -106,7 +106,7 @@
         <div class="preenchido"></div>
         <div class="preenchido"></div>
       </div>
-      <form action="#">
+      <form action="#" id="pag4">
         <h3>Selecione uma das opções abaixo:</h3>
         <label class="opcao">
           <input type="radio" name="meta" value="1" required />Perder Gordura (Emagrecer)
@@ -131,7 +131,7 @@
         <div class="vazio"></div>
         <div class="vazio"></div>
       </div>
-      <form action="#">
+      <form action="#" id="pag5">
         <h3>Você costuma comer um pouco mais nos finais de semana?</h3>
         <label class="opcao">
           <input type="radio" name="Flexibilidade" value="1" required />Não, tenho uma rotina consistente
@@ -159,7 +159,7 @@
         <div class="vazio"></div>
         <div class="vazio"></div>
       </div>
-      <form action="#">
+      <form action="#" id="pag6">
         <h3>Você segue algum tipo de dieta específica?</h3>
         <label class="opcao">
           <input type="radio" name="preferencias" value="1" required />Nenhuma específica (Onívoro)
@@ -184,7 +184,7 @@
         <div class="preenchido"></div>
         <div class="vazio"></div>
       </div>
-      <form action="#">
+      <form action="#" id="pag7">
         <h3>O que mais te motiva a alcançar seu objetivo?</h3>
         <label class="opcao">
           <input type="radio" name="motivacao" value="1" required />Melhorar a saúde e bem-estar
@@ -209,7 +209,7 @@
         <div class="preenchido"></div>
         <div class="preenchido"></div>
       </div>
-      <form action="#">
+      <form action="#" id="pag8">
         <h3>Você possui alguma condição médica, lesão ou restrição alimentar importante?</h3>
         <label class="opcao">
           <input type="radio" name="saude" value="1" required />Sim
