Finalização da funcionalidade

--- a/FitlyApp/Formulario/index.html
+++ b/FitlyApp/Formulario/index.html
@@ -46,7 +46,7 @@
         </label>
       </form>
 
-      <button type="submit" onclick="vaiPagina2(), sendEmail()">Próximo</button>
+      <button type="submit" onclick="vaiPagina2()">Próximo</button>
     </section>
 
     <section class="pag2">
@@ -221,7 +221,7 @@
           <input type="radio" name="saude" value="2" required>Não
         </label>
       </form>
-      <button type="submit" onclick="vaiPagina9(), calcTudo()">Próximo</button>
+      <button type="submit" onclick="vaiPagina9(), calcTudo(), sendEmail()">Próximo</button>
       <button class="voltar" type="submit" onclick="voltaPag7()">Voltar</button>
     </section>
 
