Ajustes na Indexação

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           Sua jornada para o topo começa <br />
           com o primeiro passo.
         </h2>
-        <a href="/Formulario/">Comece Agora</a>
+        <a href="/FitlyApp/Formulario/">Comece Agora</a>
         <img
           src="/FitlyApp/Imagens/img_pag-inicial/geike-verniers-UXVH8QPBlIQ-unsplash.jpg"
           alt="Imagem CTA"
