--- a/FitlyApp/Sobre-o-projeto/index.html
+++ b/FitlyApp/Sobre-o-projeto/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <link rel="stylesheet" href="/FitlyApp/Base/base.css">
   <link rel="stylesheet" href="css/sobreProjeto.css">
+      <link rel="icon" type="image/x-icon" href="/FitlyApp/Imagens/logos/FitlyLogo.png">
 </head>
 
 <body>
