--- a/FitlyApp/404.html
+++ b/FitlyApp/404.html
@@ -13,14 +13,14 @@
   </head>
   <body>
     <header>
-      <div class="logo">
-        <img src="Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
-      </div>
-      <nav>
+      <h1 class="logo">
+        <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
+        <a href="/FitlyApp">Fitly</a>
+      </h1>
+      <nav class="nav-menu">
         <ul>
           <li>
-            <a class="contato" href="TrabalhandoNisso.html">Artigos</a>
+            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
           </li>
         </ul>
       </nav>
