Correções do Sobre o Projeto

--- a/FitlyApp/Sobre-o-projeto/index.html
+++ b/FitlyApp/Sobre-o-projeto/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <h1 class="logo">
-      <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
+      <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" >
       <a href="/FitlyApp">
         Fitly
       </a>
@@ -148,8 +148,8 @@
           <h2>Fitly</h2>
         </a>
         <p>
-          Sua jornada para uma vida mais tranquila <br />
-          começa aqui.<br />
+          Sua jornada para uma vida mais tranquila <br/>
+          começa aqui.<br/>
           Encontre treinos, dicas e muito mais!
         </p>
         <ul>
