--- a/FitlyApp/Formulario/index.html
+++ b/FitlyApp/Formulario/index.html
@@ -260,7 +260,7 @@
       </div>
     </section>
   </main>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <script src="script.js">
   </script>
 </body>
