--- a/FitlyApp/Artigos/index.html
+++ b/FitlyApp/Artigos/index.html
@@ -52,7 +52,7 @@
             <div class="tudo">
               <a href="alimentacaoEquilibrada.html">
                 <img
-                  src="/FitlyApp/Imagens/img_Artigos/img alimentacao-equilibrada/fresh-fruits-2305192_1280 1.png"
+                  src="/FitlyApp/Imagens/img_Artigos/img%20alimentacao-equilibrada/fresh-fruits-2305192_1280%201.png"
                   alt="img"
                 />
               </a>
