--- a/FitlyApp/Sobre-o-projeto/index.html
+++ b/FitlyApp/Sobre-o-projeto/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sobre o Projeto</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-  <link rel="stylesheet" href="/FitlyApp/Base/base.css">
-  <link rel="stylesheet" href="css/sobreProjeto.css">
+  <link rel="stylesheet" href="/FitlyApp/Base/base.css?v=2">
+  <link rel="stylesheet" href="css/sobreProjeto.css?v=2">
       <link rel="icon" type="image/x-icon" href="/FitlyApp/Imagens/logos/FitlyLogo.png">
 </head>
 
