Ajustes na background image (CTA) da página inicial

--- a/FitlyApp/index.html
+++ b/FitlyApp/index.html
@@ -83,7 +83,7 @@
         <h2>O Que Oferecemos</h2>
         <ul>
           <li>
-            <h3><i class="fa-solid fa-bowl-food"></i> Receitas Saudáveis</h3>
+            <h3><span class="fa-solid fa-bowl-food"></span> Receitas Saudáveis</h3>
             <p>
               Descubra um universo de opções nutritivas e saborosas, pensadas
               para diferentes estilos de vida. Nossas receitas são práticas,
@@ -93,7 +93,7 @@
           </li>
           <li>
             <h3>
-              <i class="fa-solid fa-scale-balanced"></i> Contador de Calorias
+              <span class="fa-solid fa-scale-balanced"></span> Contador de Calorias
             </h3>
             <p>
               Acompanhe sua ingestão de forma simples e inteligente. Registre
@@ -104,7 +104,7 @@
           </li>
           <li>
             <h3>
-              <i class="fa-solid fa-bottle-water"></i> Controle de Água e Peso
+              <span class="fa-solid fa-bottle-water"></span> Controle de Água e Peso
             </h3>
             <p>
               Monitore sua hidratação diária e acompanhe a evolução do seu peso
@@ -114,7 +114,7 @@
             </p>
           </li>
           <li>
-            <h3><i class="fa-solid fa-book"></i> Artigos</h3>
+            <h3><span class="fa-solid fa-book"></span> Artigos</h3>
             <p>
               Acesse conteúdos sobre saúde, nutrição, exercícios e bem-estar.
               Nossos artigos foram pensados para orientar sua jornada de
@@ -130,10 +130,6 @@
           com o primeiro passo.
         </h2>
         <a href="/FitlyApp/Formulario/">Comece Agora</a>
-        <img
-          src="/FitlyApp/Imagens/img_pag-inicial/geike-verniers-UXVH8QPBlIQ-unsplash.jpg"
-          alt="Imagem CTA"
-        />
       </section>
     </main>
 
