--- a/FitlyApp/Sobre-o-projeto/index.html
+++ b/FitlyApp/Sobre-o-projeto/index.html
@@ -53,7 +53,7 @@
       </div>
     </section>
 
-    <section class="colaboradores">
+    <section class="colaboradores" id="devs">
       <div class="h2">
         <h2>Colaboradores do projeto</h2>
       </div>
