--- a/FitlyApp/index.html
+++ b/FitlyApp/index.html
@@ -181,6 +181,9 @@
             <li>
               <a href="/FitlyApp/Referencias/">Referências</a>
             </li>
+             <li>
+              <a href="Sobre-o-projeto/index.html#devs">Desenvolvedores</a>
+            </li>
           </ul>
         </div>
         <div class="contact">
