--- a/FitlyApp/Sobre-o-projeto/index.html
+++ b/FitlyApp/Sobre-o-projeto/index.html
@@ -1,236 +1,275 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sobre o Projeto</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="/FitlyApp/Base/base.css?v=2" />
+    <link rel="stylesheet" href="css/sobreProjeto.css?v=2" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/FitlyApp/Imagens/logos/FitlyLogo.png"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sobre o Projeto</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-  <link rel="stylesheet" href="/FitlyApp/Base/base.css?v=2">
-  <link rel="stylesheet" href="css/sobreProjeto.css?v=2">
-      <link rel="icon" type="image/x-icon" href="/FitlyApp/Imagens/logos/FitlyLogo.png">
-</head>
-
-<body>
-  <header>
-    <h1 class="logo">
-      <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" >
-      <a href="/FitlyApp">
-        Fitly
-      </a>
-    </h1>
-    <nav class="nav-menu">
-      <button id="btn">
-        <span class="fa-solid fa-moon" id="lua"></span>
-        <span class="fa-solid fa-sun" id="sol"></span>
-      </button>
-      <ul>
-        <li>
-          <a href="/FitlyApp/">Início</a>
-        </li>
-        <li>
-          <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
-        </li>
-        <li>
-          <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-        </li>
-      </ul>
-    </nav>
-    <div class="hamburger">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
-  </header>
-
-  <main>
-    <section id="banner">
-      <div class="IMG">
-        <img src="/FitlyApp/Imagens/img_banners/charlesdeluvio-Lks7vei-eAg-unsplash.jpg" alt="Banner"/>
-        <div class="banner">
-          <h1>Sobre o Projeto</h1>
+  <body>
+    <header>
+      <nav class="nav-menu">
+        <h1>
+          <a class="logo" href="/FitlyApp"
+            ><img
+              src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png"
+              alt="Logo"
+            />
+            Fitly</a
+          >
+        </h1>
+        <div>
+          <button id="btn">
+            <span class="fa-solid fa-moon" id="lua"></span>
+            <span class="fa-solid fa-sun" id="sol"></span>
+          </button>
+          <ul>
+            <li>
+              <a href="/FitlyApp/">Início</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
+            </li>
+            <li>
+              <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+            </li>
+          </ul>
         </div>
+      </nav>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
       </div>
-    </section>
+    </header>
 
-    <section class="colaboradores" id="devs">
-      <div class="h2">
-        <h2>Colaboradores do projeto</h2>
-      </div>
-
-      <div class="unico">
-        <div class="unit" id="convidada">
-          <strong>Bruna Ignácio Bernardes: </strong>
-          <p>
-            Formada em nutrição, trabalha atualmente com marketing, ajudou na
-            criação de vários artigos para o projeto.
-          </p>
-          <p>
-            <img src="/FitlyApp/Imagens/Img_integrantes/Bruna%20Ignácio%20Bernardes.jpg" alt="Bruna" class="imagem">
-          </p>
+    <main>
+      <section id="banner">
+        <div class="IMG">
+          <img
+            src="/FitlyApp/Imagens/img_banners/charlesdeluvio-Lks7vei-eAg-unsplash.jpg"
+            alt="Banner"
+          />
+          <div class="banner">
+            <h1>Sobre o Projeto</h1>
+          </div>
         </div>
-      </div>
+      </section>
 
-      <ul class="colab" id="parti">
-        <li>
-          <strong>Igor Marcon Michels:</strong>
-          <p class="txt">
-            Líder do projeto,
-            responsável pela entrega das partes de cada um e coordenador das
-            funções de cada um.
-          </p>
-          <p>
-            <img class="imagem" src="../Imagens/Img_integrantes/AIgor.jpg" alt="Igor Michels" />
-          </p>
-        </li>
-        <li>
-          <strong>Pedro José Oliveira da Roza:</strong>
-          <p class="txt">
-            Responsável pela
-            pesquisa e auxiliar no desenvolvimento das partes estáticas do
-            site, além de ajudar na lógica.
-          </p>
-          <p>
-            <img class="imagem" src="../Imagens/Img_integrantes/APedro.jpg" alt="Pedro josé" />
-          </p>
-        </li>
+      <section class="colaboradores" id="devs">
+        <div class="h2">
+          <h2>Colaboradores do projeto</h2>
+        </div>
 
-        <li>
-          <strong>Victor Feliciano:</strong>
-          <p class="txt">
-            Responsável pela revisão dos erros encontrados no validador, além de alguns ajustes no javascript.
-          </p>
-          <p>
-            <img class="imagem" src="../Imagens/Img_integrantes/AFeliciano.jpg" alt="Victor Murilo" />
-          </p>
-        </li>
-        <li>
-          <strong>Victor Murilo Bernardes:</strong>
-          <p class="txt">
-            Secretário do projeto,
-            responsável pela descrição e desenvolvimento das atas de reunião;
-          </p>
-          <p>
-            <img class="imagem" src="../Imagens/Img_integrantes/AVictor%20Murilo.jpg" alt="Victor Murilo" />
-          </p>
-        </li>
+        <div class="unico">
+          <div class="unit" id="convidada">
+            <strong>Bruna Ignácio Bernardes: </strong>
+            <p>
+              Formada em nutrição, trabalha atualmente com marketing, ajudou na
+              criação de vários artigos para o projeto.
+            </p>
+            <p>
+              <img
+                src="/FitlyApp/Imagens/Img_integrantes/Bruna%20Ignácio%20Bernardes.jpg"
+                alt="Bruna"
+                class="imagem"
+              />
+            </p>
+          </div>
+        </div>
 
-        <li>
-          <strong>Kaue Teixeira:</strong>
-          <p class="txt">
-            Responsável por programar as
-            partes estáticas do site, além de auxiliar na pesquisa;
-          </p>
-          <p>
-            <img class="imagem" src="../Imagens/Img_integrantes/AKaue.jpg" alt="Kaue Teixeira" />
-          </p>
-        </li>
-
-        <li>
-          <strong>Matheus Lacerda Maximiano:</strong>
-          <p class="txt">
-            Criador da organização, responsável por parte da pesquisa;
-          </p>
-          <p>
-            <img class="imagem" src="../Imagens/Img_integrantes/AMatheus.jpg" alt="Matheus Maximiano Lacerda" />
-          </p>
-        </li>
-
-      </ul>
-
-    </section>
-  </main>
-  <footer>
-    <div>
-      <div class="logo">
-        <a href="/FitlyApp/">
-          <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background" />
-          <h2>Fitly</h2>
-        </a>
-        <p>
-          Sua jornada para uma vida mais tranquila <br/>
-          começa aqui.<br/>
-          Encontre treinos, dicas e muito mais!
-        </p>
-        <ul>
+        <ul class="colab" id="parti">
           <li>
-            <a target="_blank" href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"></span></a>
+            <strong>Igor Marcon Michels:</strong>
+            <p class="txt">
+              Líder do projeto, responsável pela entrega das partes de cada um e
+              coordenador das funções de cada um.
+            </p>
+            <p>
+              <img
+                class="imagem"
+                src="../Imagens/Img_integrantes/AIgor.jpg"
+                alt="Igor Michels"
+              />
+            </p>
           </li>
           <li>
-            <a target="_blank" href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
+            <strong>Pedro José Oliveira da Roza:</strong>
+            <p class="txt">
+              Responsável pela pesquisa e auxiliar no desenvolvimento das partes
+              estáticas do site, além de ajudar na lógica.
+            </p>
+            <p>
+              <img
+                class="imagem"
+                src="../Imagens/Img_integrantes/APedro.jpg"
+                alt="Pedro josé"
+              />
+            </p>
+          </li>
+
+          <li>
+            <strong>Victor Feliciano:</strong>
+            <p class="txt">
+              Responsável pela revisão dos erros encontrados no validador, além
+              de alguns ajustes no javascript.
+            </p>
+            <p>
+              <img
+                class="imagem"
+                src="../Imagens/Img_integrantes/AFeliciano.jpg"
+                alt="Victor Murilo"
+              />
+            </p>
           </li>
           <li>
-            <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
+            <strong>Victor Murilo Bernardes:</strong>
+            <p class="txt">
+              Secretário do projeto, responsável pela descrição e
+              desenvolvimento das atas de reunião;
+            </p>
+            <p>
+              <img
+                class="imagem"
+                src="../Imagens/Img_integrantes/AVictor%20Murilo.jpg"
+                alt="Victor Murilo"
+              />
+            </p>
+          </li>
+
+          <li>
+            <strong>Kaue Teixeira:</strong>
+            <p class="txt">
+              Responsável por programar as partes estáticas do site, além de
+              auxiliar na pesquisa;
+            </p>
+            <p>
+              <img
+                class="imagem"
+                src="../Imagens/Img_integrantes/AKaue.jpg"
+                alt="Kaue Teixeira"
+              />
+            </p>
+          </li>
+
+          <li>
+            <strong>Matheus Lacerda Maximiano:</strong>
+            <p class="txt">
+              Criador da organização, responsável por parte da pesquisa;
+            </p>
+            <p>
+              <img
+                class="imagem"
+                src="../Imagens/Img_integrantes/AMatheus.jpg"
+                alt="Matheus Maximiano Lacerda"
+              />
+            </p>
           </li>
         </ul>
+      </section>
+    </main>
+    <footer>
+      <div>
+        <div class="logo">
+          <a href="/FitlyApp/">
+            <img
+              src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png"
+              alt="Fitly_background"
+            />
+            <h2>Fitly</h2>
+          </a>
+          <p>
+            Sua jornada para uma vida mais tranquila <br />
+            começa aqui.<br />
+            Encontre treinos, dicas e muito mais!
+          </p>
+          <ul>
+            <li>
+              <a target="_blank" href="https://instagram.com/app.fitly"
+                ><span class="fa-brands fa-instagram"></span
+              ></a>
+            </li>
+            <li>
+              <a target="_blank" href="https://tiktok.com/@app.fitly"
+                ><span class="fa-brands fa-tiktok"></span
+              ></a>
+            </li>
+            <li>
+              <a target="_blank" href="https://x.com/app_fitly"
+                ><span class="fa-brands fa-twitter"></span
+              ></a>
+            </li>
+          </ul>
+        </div>
+        <div class="mapSite">
+          <h2>Indice</h2>
+          <ul>
+            <li>
+              <a href="/FitlyApp/">Início</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Sobre-o-projeto/"> Nosso projeto </a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Artigos/">Artigos</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Referencias/">Referências</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Sobre-o-projeto/index.html#devs"
+                >Desenvolvedores</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="contact">
+          <h2>Contato</h2>
+          <p>Tem alguma dúvida? Nos contate!</p>
+          <p class="email">Fitlyapp1@gmail.com</p>
+          <p>
+            Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto
+            Federal Catarinense
+          </p>
+        </div>
       </div>
-      <div class="mapSite">
-        <h2>Indice</h2>
-        <ul>
-          <li>
-            <a href="/FitlyApp/">Início</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Sobre-o-projeto/"> Nosso projeto </a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Artigos/">Artigos</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Referencias/">Referências</a>
-          </li>
-        </ul>
+      <div class="direitos">
+        <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
       </div>
-      <div class="contact">
-        <h2>Contato</h2>
-        <p>Tem alguma dúvida? Nos contate!</p>
-        <p class="email">Fitlyapp1@gmail.com</p>
-        <p>
-          Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto
-          Federal Catarinense
-        </p>
-      </div>
-    </div>
-    <div class="direitos">
-      <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
-    </div>
-  </footer>
-  <script src="/FitlyApp/Base/script.js"></script>
-  <script>
-    let eClaro = true;
-    const raiz = document.documentElement;
-    let luaImg = document.getElementById('lua');
-    let solImg = document.getElementById("sol");
-    let botaoNoturno = document.getElementById('btn');
-    let listaParticipantes = document.getElementById('parti').querySelectorAll('li');
-    let itemBruna = document.getElementById('convidada');
-    botaoNoturno.addEventListener("click", function () {
-      if (eClaro) {
-        raiz.style.setProperty('--color-background', '#1D201F');
-        raiz.style.setProperty('--color-text', 'white');
-        luaImg.style.display = "none";
-        solImg.style.display = "block";
-        itemBruna.style.backgroundColor = "#1D201F";
-        for (const item of listaParticipantes) {
-          item.style.backgroundColor = "#1D201F";
+    </footer>
+    <script src="/FitlyApp/Base/script.js"></script>
+    <script>
+      let eClaro = true;
+      const raiz = document.documentElement;
+      let luaImg = document.getElementById("lua");
+      let solImg = document.getElementById("sol");
+      let botaoNoturno = document.getElementById("btn");
+      botaoNoturno.addEventListener("click", function () {
+        if (eClaro) {
+          raiz.style.setProperty("--color-background", "#1D201F");
+          raiz.style.setProperty("--color-text", "white");
+          eClaro = false;
+          luaImg.style.display = "none";
+          solImg.style.display = "block";
+        } else {
+          raiz.style.setProperty("--color-background", "#f7f7f7");
+          raiz.style.setProperty("--color-text", "#0D1B2A");
+          luaImg.style.display = "block";
+          solImg.style.display = "none";
+          eClaro = true;
         }
-        eClaro = false;
-
-      } else {
-        raiz.style.setProperty('--color-background', '#f7f7f7');
-        raiz.style.setProperty('--color-text', '#0D1B2A');
-        solImg.style.display = "none";
-        luaImg.style.display = "block";
-        itemBruna.style.backgroundColor = "#f7f7f7";
-        for (const item of listaParticipantes) {
-          item.style.backgroundColor = "#f7f7f7";
-        }
-        eClaro = true;
-      }
-    })
-  </script>
-</body>
-
-
-
+      });
+    </script>
+  </body>
 </html>
