--- a/FitlyApp/404.html
+++ b/FitlyApp/404.html
@@ -13,17 +13,29 @@
   </head>
   <body>
     <header>
-      <h1 class="logo">
-        <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp">Fitly</a>
-      </h1>
       <nav class="nav-menu">
-        <ul>
-          <li>
-            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-          </li>
-        </ul>
+        <h1>
+          <a class="logo" href="/FitlyApp"
+            ><img
+              src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png"
+              alt="Logo"
+            />
+            Fitly</a
+          >
+        </h1>
+        <div>
+          <ul>
+            <li>
+              <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+            </li>
+          </ul>
+        </div>
       </nav>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
     </header>
     <main>
       <section class="NotFound" id="NotFound">
@@ -31,7 +43,7 @@
         <h2>Página Não Encontrada</h2>
         <button></button>
         <a href="index.html">
-          <i class="fa-solid fa-house"></i> Volte A Página Inicial</a
+          <span class="fa-solid fa-house"></span> Volte A Página Inicial</a
         >
       </section>
     </main>
