--- a/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
+++ b/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
@@ -14,27 +14,34 @@
   </head>
 
   <body>
-    <header>
-      <h1 class="logo">
-        <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp">Fitly</a>
-      </h1>
+       <header>
       <nav class="nav-menu">
+        <h1>
+          <a class="logo" href="/FitlyApp"
+            ><img
+              src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png"
+              alt="Logo"
+            />
+            Fitly</a
+          >
+        </h1>
+        <div>
           <button id="btn">
-        <span class="fa-solid fa-moon" id="lua"></span>
-        <span class="fa-solid fa-sun" id="sol"></span>
-      </button>
-        <ul>
-          <li>
-            <a href="/FitlyApp/">Início</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
-          </li>
-          <li>
-            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-          </li>
-        </ul>
+            <span class="fa-solid fa-moon" id="lua"></span>
+            <span class="fa-solid fa-sun" id="sol"></span>
+          </button>
+          <ul>
+            <li>
+              <a href="/FitlyApp/">Início</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
+            </li>
+            <li>
+              <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+            </li>
+          </ul>
+        </div>
       </nav>
       <div class="hamburger">
         <span class="bar"></span>
@@ -201,6 +208,11 @@
             <li>
               <a href="/FitlyApp/Referencias/">Referências</a>
             </li>
+            <li>
+              <a href="/FitlyApp/Sobre-o-projeto/index.html#devs"
+                >Desenvolvedores</a
+              >
+            </li>
           </ul>
         </div>
         <div class="contact">
@@ -218,44 +230,28 @@
       </div>
     </footer>
     <script src="/FitlyApp/Base/script.js"></script>
-      
-  <script>
-    let eClaro = true;
-    const raiz = document.documentElement;
-    let luaImg = document.getElementById('lua');
-    let solImg = document.getElementById("sol");
-    let listaBeneficios = document.querySelector('section ul').querySelectorAll('li');
-    let listaMaleficios = document.getElementById('mal').querySelectorAll('li');
-    let botaoNoturno = document.getElementById('btn');
-    botaoNoturno.addEventListener("click", function () {
-      if (eClaro) {
-        raiz.style.setProperty('--color-background', '#1D201F');
-        raiz.style.setProperty('--color-text', 'white');
-        for (const itens of listaBeneficios) {
-          itens.style.backgroundColor = "#0a0908";
+    <script>
+      let eClaro = true;
+      const raiz = document.documentElement;
+      let luaImg = document.getElementById("lua");
+      let solImg = document.getElementById("sol");
+      let botaoNoturno = document.getElementById("btn");
+      botaoNoturno.addEventListener("click", function () {
+        if (eClaro) {
+          raiz.style.setProperty("--color-background", "#1D201F");
+          raiz.style.setProperty("--color-text", "white");
+          eClaro = false;
+          luaImg.style.display = "none";
+          solImg.style.display = "block";
+        } else {
+          raiz.style.setProperty("--color-background", "#f7f7f7");
+          raiz.style.setProperty("--color-text", "#0D1B2A");
+          luaImg.style.display = "block";
+          solImg.style.display = "none";
+          eClaro = true;
         }
-        for (const itens of listaMaleficios) {
-          itens.style.backgroundColor = "#0a0908";
-        }
-        luaImg.style.display = "none";
-        solImg.style.display = "block";
-        eClaro = false;
-      } else {
-        raiz.style.setProperty('--color-background', '#f7f7f7');
-        raiz.style.setProperty('--color-text', '#000000');
-       
-        for (const itens of listaBeneficios) {
-          itens.style.backgroundColor = "white";
-        }
-        for (const itens of listaMaleficios) {
-          itens.style.backgroundColor = "white";
-        }
-        luaImg.style.display = "block";
-        solImg.style.display = "none";
-        eClaro = true;
-      }
-    })
-  </script>
+      });
+    </script>
 
   </body>
 </html>
