--- a/FitlyApp/Artigos/OrganizaçãoAlimentar.html
+++ b/FitlyApp/Artigos/OrganizaçãoAlimentar.html
@@ -14,27 +14,34 @@
 </head>
 
 <body>
-    <header>
-      <h1 class="logo">
-        <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp">Fitly</a>
-      </h1>
+      <header>
       <nav class="nav-menu">
-         <button id="btn">
-        <span class="fa-solid fa-moon" id="lua"></span>
-        <span class="fa-solid fa-sun" id="sol"></span>
-      </button>
-        <ul>
-          <li>
-            <a href="/FitlyApp/">Início</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
-          </li>
-          <li>
-            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-          </li>
-        </ul>
+        <h1>
+          <a class="logo" href="/FitlyApp"
+            ><img
+              src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png"
+              alt="Logo"
+            />
+            Fitly</a
+          >
+        </h1>
+        <div>
+          <button id="btn">
+            <span class="fa-solid fa-moon" id="lua"></span>
+            <span class="fa-solid fa-sun" id="sol"></span>
+          </button>
+          <ul>
+            <li>
+              <a href="/FitlyApp/">Início</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
+            </li>
+            <li>
+              <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+            </li>
+          </ul>
+        </div>
       </nav>
       <div class="hamburger">
         <span class="bar"></span>
@@ -201,96 +208,96 @@
     </main>
 
     <footer>
-        <div>
-            <div class="logo">
-                <a href="/FitlyApp/">
-                    <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
-                    <h2>
-                        Fitly
-                    </h2>
-                </a>
-                <p>
-                    Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
-                </p>
-                <ul>
-                    <li>
-                        <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"></span></a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="https://tiktok.com/@app.fitly"><span
-                                class="fa-brands fa-tiktok"></span></a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="mapSite">
-                <h2>
-                    Indice
-                </h2>
-                <ul>
-                    <li>
-                        <a href="/FitlyApp/">Início</a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Sobre-o-projeto/">
-                            Nosso projeto
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Artigos/">Artigos</a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Referencias/">Referências</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="contact">
-                <h2> Contato</h2>
-                <p>
-                    Tem alguma dúvida? Nos contate!
-                </p>
-                <p class="email">
-                    Fitlyapp1@gmail.com
-                </p>
-                <p>
-                    Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
-                </p>
-            </div>
+      <div>
+        <div class="logo">
+          <a href="/FitlyApp/">
+            <img
+              src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png"
+              alt="Fitly_background"
+            />
+            <h2>Fitly</h2>
+          </a>
+          <p>
+            Sua jornada para uma vida mais tranquila <br />
+            começa aqui.<br />
+            Encontre treinos, dicas e muito mais!
+          </p>
+          <ul>
+            <li>
+              <a target="_blank" href="https://instagram.com/app.fitly"
+                ><span class="fa-brands fa-instagram"></span
+              ></a>
+            </li>
+            <li>
+              <a target="_blank" href="https://tiktok.com/@app.fitly"
+                ><span class="fa-brands fa-tiktok"></span
+              ></a>
+            </li>
+            <li>
+              <a target="_blank" href="https://x.com/app_fitly"
+                ><span class="fa-brands fa-twitter"></span
+              ></a>
+            </li>
+          </ul>
         </div>
-        <div class="direitos">
-            <p>
-                &copy; 2025 Fitly. Todos os direitos reservados.
-            </p>
+        <div class="mapSite">
+          <h2>Indice</h2>
+          <ul>
+            <li>
+              <a href="/FitlyApp/">Início</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Sobre-o-projeto/"> Nosso projeto </a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Artigos/">Artigos</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Referencias/">Referências</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Sobre-o-projeto/index.html#devs"
+                >Desenvolvedores</a
+              >
+            </li>
+          </ul>
         </div>
+        <div class="contact">
+          <h2>Contato</h2>
+          <p>Tem alguma dúvida? Nos contate!</p>
+          <p class="email">Fitlyapp1@gmail.com</p>
+          <p>
+            Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto
+            Federal Catarinense
+          </p>
+        </div>
+      </div>
+      <div class="direitos">
+        <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
+      </div>
     </footer>
     <script src="/FitlyApp/Base/script.js"></script>
-    
     <script>
-        let eClaro = true;
-        const raiz = document.documentElement;
-        let luaImg = document.getElementById('lua');
-        let solImg = document.getElementById("sol");
-        let botaoNoturno = document.getElementById('btn');
-        let dicaExtra = document.getElementById('dica-extra');
-        botaoNoturno.addEventListener("click", function () {
-            if (eClaro) {
-                raiz.style.setProperty('--color-background', '#1D201F');
-                raiz.style.setProperty('--color-text', 'white');
-                luaImg.style.display = "none";
-                solImg.style.display = "block";
-                dicaExtra.style.backgroundColor = "#0a0908";
-                eClaro = false;
-            } else {
-                raiz.style.setProperty('--color-background', '#f7f7f7');
-                raiz.style.setProperty('--color-text', '#000000');
-                luaImg.style.display = "block";
-                solImg.style.display = "none";
-                dicaExtra.style.backgroundColor = "#e6f5ff";
-                eClaro = true;
-            }
-        })
+      let eClaro = true;
+      const raiz = document.documentElement;
+      let luaImg = document.getElementById("lua");
+      let solImg = document.getElementById("sol");
+      let botaoNoturno = document.getElementById("btn");
+      botaoNoturno.addEventListener("click", function () {
+        if (eClaro) {
+          raiz.style.setProperty("--color-background", "#1D201F");
+          raiz.style.setProperty("--color-text", "white");
+          eClaro = false;
+          luaImg.style.display = "none";
+          solImg.style.display = "block";
+        } else {
+          raiz.style.setProperty("--color-background", "#f7f7f7");
+          raiz.style.setProperty("--color-text", "#0D1B2A");
+          luaImg.style.display = "block";
+          solImg.style.display = "none";
+          eClaro = true;
+        }
+      });
     </script>
 
 </body>
