--- a/FitlyApp/Referencias/index.html
+++ b/FitlyApp/Referencias/index.html
@@ -19,27 +19,34 @@
   </head>
 
   <body>
-    <header>
-      <h1 class="logo">
-        <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp">Fitly</a>
-      </h1>
+      <header>
       <nav class="nav-menu">
-        <button id="btn">
-          <span class="fa-solid fa-moon" id="lua"></span>
-          <span class="fa-solid fa-sun" id="sol"></span>
-        </button>
-        <ul>
-          <li>
-            <a href="/FitlyApp/">Início</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
-          </li>
-          <li>
-            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-          </li>
-        </ul>
+        <h1>
+          <a class="logo" href="/FitlyApp"
+            ><img
+              src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png"
+              alt="Logo"
+            />
+            Fitly</a
+          >
+        </h1>
+        <div>
+          <button id="btn">
+            <span class="fa-solid fa-moon" id="lua"></span>
+            <span class="fa-solid fa-sun" id="sol"></span>
+          </button>
+          <ul>
+            <li>
+              <a href="/FitlyApp/">Início</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
+            </li>
+            <li>
+              <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+            </li>
+          </ul>
+        </div>
       </nav>
       <div class="hamburger">
         <span class="bar"></span>
@@ -200,6 +207,11 @@
             <li>
               <a href="/FitlyApp/Referencias/">Referências</a>
             </li>
+            <li>
+              <a href="/FitlyApp/Sobre-o-projeto/index.html#devs"
+                >Desenvolvedores</a
+              >
+            </li>
           </ul>
         </div>
         <div class="contact">
@@ -218,34 +230,23 @@
     </footer>
     <script src="/FitlyApp/Base/script.js"></script>
     <script>
-
       let eClaro = true;
       const raiz = document.documentElement;
       let luaImg = document.getElementById("lua");
       let solImg = document.getElementById("sol");
-      let lista = document.querySelector("section ul").querySelectorAll('li');
-      let title = document.getElementById("titulo");
       let botaoNoturno = document.getElementById("btn");
       botaoNoturno.addEventListener("click", function () {
         if (eClaro) {
           raiz.style.setProperty("--color-background", "#1D201F");
           raiz.style.setProperty("--color-text", "white");
+          eClaro = false;
           luaImg.style.display = "none";
           solImg.style.display = "block";
-          title.style.color = "white";
-          for (const item of lista) {
-            item.style.backgroundColor = "#0a0908"
-          }
-          eClaro = false;
         } else {
           raiz.style.setProperty("--color-background", "#f7f7f7");
-          raiz.style.setProperty("--color-text", "#000000");
+          raiz.style.setProperty("--color-text", "#0D1B2A");
           luaImg.style.display = "block";
           solImg.style.display = "none";
-           title.style.color = "#000000";
-          for (const item of lista) {
-            item.style.backgroundColor = "#F7F7F7"
-          }
           eClaro = true;
         }
       });
