--- a/FitlyApp/TrabalhandoNisso.html
+++ b/FitlyApp/TrabalhandoNisso.html
@@ -12,26 +12,30 @@
     ></script>
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp">
-          <h2>Fitly</h2>
-        </a>
-      </div>
-      <nav>
-        <ul>
-          <li>
-            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o projeto</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/">Início</a>
-          </li>
-        </ul>
+       <header>
+      <nav class="nav-menu">
+        <h1>
+          <a class="logo" href="/FitlyApp"
+            ><img
+              src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png"
+              alt="Logo"
+            />
+            Fitly</a
+          >
+        </h1>
+        <div>
+          <ul>
+            <li>
+              <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+            </li>
+          </ul>
+        </div>
       </nav>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
     </header>
 
     <main>
@@ -42,7 +46,7 @@
         </h2>
         <button></button>
         <a href="/FitlyApp">
-          <i class="fa-solid fa-house"></i> Volte A Página Inicial</a
+          <span class="fa-solid fa-house"></span> Volte A Página Inicial</a
         >
       </section>
     </main>
