--- a/FitlyApp/index.html
+++ b/FitlyApp/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitly</title>
     <link rel="stylesheet" href="Base/base.css?v=2" />
-    <link rel="stylesheet" href="Base/style.css?v=2">
-    <link rel="icon" type="image/x-icon" href="/FitlyApp/Imagens/logos/FitlyLogo.png">
+    <link rel="stylesheet" href="Base/style.css?v=2" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/FitlyApp/Imagens/logos/FitlyLogo.png"
+    />
     <script>
       const images = [
         "Imagens/img_pag-inicial/ambitious-studio-rick-barrett-03b61PY89hs-unsplash.jpg",
@@ -19,7 +23,6 @@
         const randImageIndex = ~~(Math.random() * images.length);
         document.getElementById("randImg").src = images[randImageIndex];
       });
-
     </script>
     <script
       src="https://kit.fontawesome.com/a1f8cb2104.js"
@@ -29,29 +32,36 @@
 
   <body>
     <header>
-      <h1 class="logo">
-        <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp">Fitly</a>
-      </h1>
       <nav class="nav-menu">
-     <button id="btn">
-        <span class="fa-solid fa-moon" id="lua"></span>
-        <span class="fa-solid fa-sun" id="sol"></span>
-      </button>
-        <ul>
-          <li>
-            <a href="#inicio">Início</a>
-          </li>
-          <li>
-            <a href="#plataforma">Nossa Plataforma</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o projeto</a>
-          </li>
-          <li>
-            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-          </li>
-        </ul>
+        <h1>
+          <a class="logo" href="/FitlyApp"
+            ><img
+              src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png"
+              alt="Logo"
+            />
+            Fitly</a
+          >
+        </h1>
+        <div>
+          <button id="btn">
+            <span class="fa-solid fa-moon" id="lua"></span>
+            <span class="fa-solid fa-sun" id="sol"></span>
+          </button>
+          <ul>
+            <li>
+              <a href="#inicio">Início</a>
+            </li>
+            <li>
+              <a href="#plataforma">Nossa Plataforma</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Sobre-o-projeto/">Sobre o projeto</a>
+            </li>
+            <li>
+              <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+            </li>
+          </ul>
+        </div>
       </nav>
       <div class="hamburger">
         <span class="bar"></span>
@@ -71,7 +81,11 @@
         </div>
       </section>
       <section id="plataforma" class="plataforma">
-        <img src="Imagens/mockups/Home-portrait.png" class="pc" alt="FitlyApp" />
+        <img
+          src="Imagens/mockups/Home-portrait.png"
+          class="pc"
+          alt="FitlyApp"
+        />
         <h2 class="plat">Nossa Plataforma</h2>
         <h4>
           A Fitly foi desenvolvida para ser a sua parceira na busca por uma vida
@@ -83,7 +97,9 @@
         <h2>O Que Oferecemos</h2>
         <ul>
           <li>
-            <h3><span class="fa-solid fa-bowl-food"></span> Receitas Saudáveis</h3>
+            <h3>
+              <span class="fa-solid fa-bowl-food"></span> Receitas Saudáveis
+            </h3>
             <p>
               Descubra um universo de opções nutritivas e saborosas, pensadas
               para diferentes estilos de vida. Nossas receitas são práticas,
@@ -93,7 +109,8 @@
           </li>
           <li>
             <h3>
-              <span class="fa-solid fa-scale-balanced"></span> Contador de Calorias
+              <span class="fa-solid fa-scale-balanced"></span> Contador de
+              Calorias
             </h3>
             <p>
               Acompanhe sua ingestão de forma simples e inteligente. Registre
@@ -104,7 +121,8 @@
           </li>
           <li>
             <h3>
-              <span class="fa-solid fa-bottle-water"></span> Controle de Água e Peso
+              <span class="fa-solid fa-bottle-water"></span> Controle de Água e
+              Peso
             </h3>
             <p>
               Monitore sua hidratação diária e acompanhe a evolução do seu peso
@@ -126,7 +144,7 @@
       </section>
       <section class="CTA">
         <h2>
-          Sua jornada para o topo começa<br/>
+          Sua jornada para o topo começa<br />
           com o primeiro passo.
         </h2>
         <a href="/FitlyApp/Formulario/">Comece Agora</a>
@@ -181,8 +199,8 @@
             <li>
               <a href="/FitlyApp/Referencias/">Referências</a>
             </li>
-             <li>
-              <a href="Sobre-o-projeto/index.html#devs">Desenvolvedores</a>
+            <li>
+              <a href="/FitlyApp/Sobre-o-projeto/index.html#devs">Desenvolvedores</a>
             </li>
           </ul>
         </div>
@@ -203,24 +221,25 @@
     <script src="Base/script.js"></script>
     <script>
       let eClaro = true;
-    const raiz = document.documentElement;
-    let luaImg = document.getElementById('lua');
-    let solImg = document.getElementById("sol");let botaoNoturno = document.getElementById('btn');
-    botaoNoturno.addEventListener("click", function () {
-      if (eClaro) {
-        raiz.style.setProperty('--color-background', '#1D201F');
-        raiz.style.setProperty('--color-text', 'white');
-        eClaro = false;   
-        luaImg.style.display = "none";
-        solImg.style.display = "block";
-      }else {
-        raiz.style.setProperty('--color-background', '#f7f7f7');
-        raiz.style.setProperty('--color-text', '#0D1B2A');
-        luaImg.style.display = "block";
-        solImg.style.display = "none";
-        eClaro = true;
-      }
-    })
+      const raiz = document.documentElement;
+      let luaImg = document.getElementById("lua");
+      let solImg = document.getElementById("sol");
+      let botaoNoturno = document.getElementById("btn");
+      botaoNoturno.addEventListener("click", function () {
+        if (eClaro) {
+          raiz.style.setProperty("--color-background", "#1D201F");
+          raiz.style.setProperty("--color-text", "white");
+          eClaro = false;
+          luaImg.style.display = "none";
+          solImg.style.display = "block";
+        } else {
+          raiz.style.setProperty("--color-background", "#f7f7f7");
+          raiz.style.setProperty("--color-text", "#0D1B2A");
+          luaImg.style.display = "block";
+          solImg.style.display = "none";
+          eClaro = true;
+        }
+      });
     </script>
   </body>
 </html>
